--- a/Bridge.SignalR/packages.config
+++ b/Bridge.SignalR/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bridge" version="1.14.0" targetFramework="net46" />
-  <package id="Bridge.Core" version="1.14.0" targetFramework="net46" />
-  <package id="Bridge.Html5" version="1.14.0" targetFramework="net46" />
-  <package id="Bridge.jQuery" version="2.9.1" targetFramework="net46" />
-  <package id="Bridge.Min" version="1.14.0" targetFramework="net46" />
+  <package id="Bridge" version="16.0.0-beta" targetFramework="net46" />
+  <package id="Bridge.Core" version="16.0.0-beta" targetFramework="net46" />
+  <package id="Bridge.Html5" version="16.0.0-beta" targetFramework="net46" />
+  <package id="Bridge.jQuery" version="2.9.4-beta" targetFramework="net46" />
+  <package id="Bridge.Min" version="16.0.0-beta" targetFramework="net46" />
 </packages>
