--- a/.build/specs/Bridge.SignalR.nuspec
+++ b/.build/specs/Bridge.SignalR.nuspec
@@ -15,9 +15,9 @@
     <copyright>Copyright 2017</copyright>
     <tags>C# bridge bridge.net signalr</tags>
     <dependencies>
-      <dependency id="Bridge.Min" version="16.0.0-beta" />
-      <dependency id="Bridge.Html5" version="16.0.0-beta" />
-      <dependency id="Bridge.jQuery" version="2.9.0" />
+      <dependency id="Bridge.Min" version="16.0.0" />
+      <dependency id="Bridge.Html5" version="16.0.0" />
+      <dependency id="Bridge.jQuery" version="2.9.4" />
     </dependencies>
     <frameworkAssemblies>
     </frameworkAssemblies>
