--- a/Bridge.SignalR/Bridge.SignalR.csproj
+++ b/Bridge.SignalR/Bridge.SignalR.csproj
@@ -80,13 +80,13 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Bridge, Version=16.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bridge.Core.16.0.0-beta\lib\net40\Bridge.dll</HintPath>
+      <HintPath>..\packages\Bridge.Core.16.0.0\lib\net40\Bridge.dll</HintPath>
     </Reference>
     <Reference Include="Bridge.Html5, Version=16.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bridge.Html5.16.0.0-beta\lib\net40\Bridge.Html5.dll</HintPath>
+      <HintPath>..\packages\Bridge.Html5.16.0.0\lib\net40\Bridge.Html5.dll</HintPath>
     </Reference>
     <Reference Include="Bridge.jQuery2, Version=2.9.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bridge.jQuery.2.9.4-beta\lib\net40\Bridge.jQuery2.dll</HintPath>
+      <HintPath>..\packages\Bridge.jQuery.2.9.4\lib\net40\Bridge.jQuery2.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' " Project="$(SolutionDir)\.build\common\NuGet.Build.Package.targets" />
@@ -97,12 +97,12 @@
     <Message Text="Cleaning NuGet packages in $(ProjectDir)$(OutDir)" Importance="high" />
     <Delete Files="@(FilesToDelete)" ContinueOnError="true" />
   </Target>
-  <Import Project="..\packages\Bridge.Min.16.0.0-beta\build\Bridge.Min.targets" Condition="Exists('..\packages\Bridge.Min.16.0.0-beta\build\Bridge.Min.targets')" />
+  <Import Project="..\packages\Bridge.Min.16.0.0\build\Bridge.Min.targets" Condition="Exists('..\packages\Bridge.Min.16.0.0\build\Bridge.Min.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Bridge.Min.16.0.0-beta\build\Bridge.Min.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Bridge.Min.16.0.0-beta\build\Bridge.Min.targets'))" />
+    <Error Condition="!Exists('..\packages\Bridge.Min.16.0.0\build\Bridge.Min.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Bridge.Min.16.0.0\build\Bridge.Min.targets'))" />
   </Target>
   <!-- NuGet packaging finishes -->
 </Project>
